--- a/app/assets/stylesheets/module/_modes.scss
+++ b/app/assets/stylesheets/module/_modes.scss
@@ -10,8 +10,8 @@
     @include flex-box();
 
     &__title {
-      font-family: Georgia, 'Times New Roman', Times, serif;
-      font-size: 80px;
+      font-family: 'Creepster', cursive;
+      font-size: 90px;
     }
   }
 
@@ -24,7 +24,7 @@
     &__top {
       height: 50vh;
       width: calc(100vw - 500px);
-      background-color: cyan;
+      background-color: orange;;
       @include flex-box();
 
       .normal {
@@ -35,7 +35,7 @@
     &__bottom {
       height: calc(100vh - 50vh);
       width: calc(100vw - 500px);
-      background-color: dodgerblue;
+      background-color: darkorange;
       @include flex-box();
 
       .hard {
