--- a/app/views/modes/index.html.haml
+++ b/app/views/modes/index.html.haml
@@ -10,10 +10,10 @@
           Mac book
   .RightSide
     .RightSide__top
-      = link_to "#", class: "normal" do
+      = link_to "/normals", class: "normal" do
         = icon('far', 'grin-alt', class: "nmark")
         Normal Mode
     .RightSide__bottom
-      = link_to "#", class: "hard" do
+      = link_to "/hards", class: "hard" do
         = icon('far', 'grin-squint-tears', class: "hmark")
         Hard Mode
