--- a/app/assets/stylesheets/module/_normals.scss
+++ b/app/assets/stylesheets/module/_normals.scss
@@ -95,6 +95,8 @@
     margin-left: 47%;
     position: absolute;
     margin-top: 12px;
+    text-decoration: none;
+    color: black;
   }
 
   .display {
